--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-  <html><head>
+  <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
+    <title>Ole-Magnus Stallvik | Portfolio</title>
   </head>
   <body>
     <!-- START NAV -->
 
-    <nav id="navbar" class="nav">
-      <ul class="nav-list">
-        <li>
-          <a href="#welcome-section">About</a>
-        </li>
-        <li>
-          <a href="#projects">Work</a>
-        </li>
-        <li>
-          <a href="#contact">Contact</a>
-        </li>
-      </ul>
-    </nav>
+    <section>
+      <!-- <nav> -->
+        <div class="navbar" id="Navbar">
+          <div>
+            <h2 class="nav-h2">Hanole.dev</h2>
+          </div>
+          <a class="nav-links" href="#welcome-section"><p class="nav-animation">Home</p></a>
+          <a class="nav-links" href="#About"><p class="nav-animation">About me</p></a>
+          <a class="nav-links" href="#projects"><p class="nav-animation">Projects</p></a>
+          <a class="nav-links" href="#contact"><p class="nav-animation">Contact</p></a>
+          <span class="nav-slider"></span>
+        </div>
+
+      <!-- </nav> -->
+    </section>
+
 
     <!-- END NAV -->
 
@@ -28,7 +32,7 @@
 
     <section id="welcome-section" class="welcome-section">
       <h1>My name is Ole-Magnus</h1>
-      <p>a web developer</p>
+      <p>Web Developer</p>
     </section>
 
     <!-- END WELCOME SECTION -->
@@ -88,8 +92,6 @@
           </p>
         </a>
       </div>
-
-      <a href="https://codepen.io/FreeCodeCamp/" class="btn btn-show-all" target="_blank">Show all<i class="fas fa-chevron-right"></i></a>
     </section>
 
     <!-- END PROJECTS SECTION -->
@@ -102,11 +104,7 @@
         <p>How do you take your coffee?</p>
       </div>
       <div class="contact-links">
-        <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
-        <a id="profile-link" href="https://github.com/freecodecamp" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-        <a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter</a>
-        <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-        <a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+        
       </div>
     </section>
 
@@ -115,17 +113,13 @@
     <!-- START FOOTER SECTION -->
 
     <footer>
-      <p>
-        **This is just a fake portfolio. All the projects and contact details
-        given are not real.
-      </p>
-      <p>
-        © Created for
-        <a href="https://www.freecodecamp.com/" target="_blank">freeCodeCamp <i class="fab fa-free-code-camp"></i></a>
-      </p>
+      
     </footer>
 
     <!-- END FOOTER SECTION -->
   
+<script src="script.js">
+</script>
+</body>
 
-</body></html>
+</html>
